src/test/deca/context/invalid/created/decl_class/redefinition_super_field_comme_met.deca
// Description :
//   	redefinition 
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 13 : (2.6) met définit déjà un champ

class A {
int met;
}

class B extends A {
int met(){}
}














